cert-manager/ing-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - test.bhuvandevops.xyz
    secretName: ssl-cert-production
  rules:
  - host: test.bhuvandevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: rancher-demo
            port:
              number: 80
